--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ language: ruby
 cache: bundler
 rvm:
   - 2.5.3
+
+env:
+  - "RAILS_VERSION=5.2.3"
+  - "RAILS_VERSION=6.0.0"
+
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
