Provide a mechanism for admin tag searching

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -32,5 +32,5 @@ Style/Documentation:
 # Cop supports --auto-correct.
 # Configuration parameters: AutoCorrect, AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
 # URISchemes: http, https
-Layout/LineLength:
+Metrics/LineLength:
   Max: 164
