--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,10 @@
 inherit_from: .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 2.5
+  TargetRubyVersion: 2.6
+  SuggestExtensions: false
 
 Metrics/BlockLength:
   Exclude:
+    - 'dor-services-client.gemspec'
     - 'spec/**/*'
