--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,8 @@ orbs:
           - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
         steps:
           - checkout
-          - ruby/install-deps
+          - ruby/install-deps:
+              with-cache: false
           - ruby/rubocop-check
       test-client:
         parameters:
@@ -62,7 +63,8 @@ orbs:
         parallelism: 3
         steps:
           - checkout
-          - ruby/install-deps
+          - ruby/install-deps:
+              with-cache: false
           - test
       test-rails:
         parameters:
@@ -162,8 +164,6 @@ orbs:
 workflows:
   build:
     jobs:
-      - ruby-rails/validate-api:
-          name: validate
       - ruby-rails/lint:
           name: lint
       - ruby-rails/test-client:
