--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ orbs:
           - checkout
           - ruby/install-deps:
               with-cache: false
+              bundler-version: << parameters.bundler-version >>
           - test
       test-rails:
         parameters:
