--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,10 +55,10 @@ orbs:
             default: '2.7.5'
             description: The `cimg/ruby` Docker image version tag.
             type: string
-          bundler-version:
-            default: '2.2.15'
-            description: Version of bundler to use.
-            type: string
+          # bundler-version:
+          #   default: '2.2.15'
+          #   description: Version of bundler to use.
+          #   type: string
         docker:
           - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
         environment:
@@ -67,16 +67,6 @@ orbs:
         parallelism: 3
         steps:
           - checkout
-          - run:
-              command: |
-                if ! [ -z <<parameters.bundler-version>> ]; then
-                  echo "Found bundler-version parameter to override"
-                  APP_BUNDLER_VERSION=<<parameters.bundler-version>>
-                fi
-                if ! [ -z << parameters.bundler-version >> ]; then
-                  echo "Found bundler-version parameter to override2"
-                  APP_BUNDLER_VERSION=<< parameters.bundler-version >>
-                fi
           - ruby/install-deps:
               with-cache: false
               bundler-version: '2.2.15'
