--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,8 @@ orbs:
             type: string
         docker:
           - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
+        environment:
+          APP_BUNDLER_VERSION: '2.2.15'
         steps:
           - checkout
           - ruby/install-deps:
