--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ orbs:
           - run:
               name: Bundle Install
               command: bundle check || bundle install
+          - run:
+              name: Install rspec_junit_formatter
+              command: bundle install rspec_junit_formatter
       test:
         description: Runs rspec wrapped with code climate
         steps:
