--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ orbs:
           - ruby/rspec-test
           - run:
               name: upload test coverage report to Code Climate
-              command: ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code -r $<< parameters.cc-test-reporter-id >> $?
+              command: ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $? -r $<< parameters.cc-test-reporter-id >>
       validate-api:
         description: Validate openapi specification
         steps:
