--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,70 @@ orbs:
       node: circleci/node@3.0
       ruby: circleci/ruby@1.2.0
       browser-tools: circleci/browser-tools@1.2.3
+    executors:
+      ruby:
+        description: Ruby-only executor.
+        parameters:
+          ruby-tag:
+            default: '2.7.5'
+            description: The `cimg/ruby` Docker image version tag.
+            type: string
+        docker:
+          - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
+            environment:
+              BUNDLE_JOBS: '3'
+              BUNDLE_RETRY: '3'
+      ruby-postgres:
+        description: Ruby and postgres-only executor.
+        parameters:
+          ruby-tag:
+            default: '2.7.5'
+            description: The `cimg/ruby` Docker image version tag.
+            type: string
+          postgres-tag:
+            default: '11.13'
+            description: The `cimg/postgres` Docker image version tag.
+            type: string
+        docker:
+          - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
+            environment:
+              BUNDLE_JOBS: '3'
+              BUNDLE_RETRY: '3'
+              PGHOST: 127.0.0.1
+              PGPASSWORD: sekret
+              PGUSER: circleci
+              RAILS_ENV: test
+              PAGER: cat
+          - image: 'cimg/postgres:<< parameters.postgres-tag >>'
+            environment:
+              POSTGRES_USER: postgres
+              POSTGRES_PASSWORD: sekret        
+      ruby-postgres-redis:
+        description: Ruby, postgres, and redis-only executor.
+        parameters:
+          ruby-tag:
+            default: '2.7.5'
+            description: The `cimg/ruby` Docker image version tag.
+            type: string
+          postgres-tag:
+            default: '11.13'
+            description: The `cimg/postgres` Docker image version tag.
+            type: string
+        docker:
+          - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
+            environment:
+              BUNDLE_JOBS: '3'
+              BUNDLE_RETRY: '3'
+              PGHOST: 127.0.0.1
+              PGPASSWORD: sekret
+              PGUSER: circleci
+              RAILS_ENV: test
+              PAGER: cat
+          - image: 'cimg/postgres:<< parameters.postgres-tag >>'
+            environment:
+              POSTGRES_USER: circleci
+              POSTGRES_PASSWORD: sekret              
+          - image: circleci/redis:3
     commands:
       gem-install-deps:
         description: Install dependencies without using deployment mode (suitable for gems)
@@ -50,27 +114,22 @@ orbs:
     jobs:
       lint:
         parameters:
-          ruby-tag:
-            default: '2.7.5'
-            description: The `cimg/ruby` Docker image version tag.
-            type: string
-        docker:
-          - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'        
+          executor:
+            default: ruby
+            description: Executor to use for this job, defaults to ruby executor
+            type: executor
+        executor: <<parameters.executor>>
         steps:
           - checkout
           - gem-install-deps
           - ruby/rubocop-check
       test-gem:
         parameters:
-          ruby-tag:
-            default: '2.7.5'
-            description: The `cimg/ruby` Docker image version tag.
-            type: string
-        docker:
-          - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
-        environment:
-          BUNDLE_JOBS: '3'
-          BUNDLE_RETRY: '3'
+          executor:
+            default: ruby
+            description: Executor to use for this job, defaults to ruby executor
+            type: executor
+        executor: <<parameters.executor>>
         parallelism: 3
         steps:
           - checkout
@@ -81,14 +140,10 @@ orbs:
           - test
       test-rails:
         parameters:
-          ruby-tag:
-            default: '2.7.5'
-            description: The `cimg/ruby` Docker image version tag.
-            type: string
-          postgres-tag:
-            default: '11.13'
-            description: The `cimg/postgres` Docker image version tag.
-            type: string
+          executor:
+            default: ruby-postgres
+            description: Executor to use for this job, defaults to ruby-postgres executor
+            type: executor
           api-only:
             default: false
             description: True if this is an API only Rails app.
@@ -97,20 +152,11 @@ orbs:
             default: false
             description: True to install Chrome
             type: boolean
-        docker:
-          - image: 'cimg/ruby:<< parameters.ruby-tag >>-node'
-          - image: 'cimg/postgres:<< parameters.postgres-tag >>'
-            environment:
-              POSTGRES_USER: postgres
-              POSTGRES_PASSWORD: sekret
-        environment:
-          BUNDLE_JOBS: '3'
-          BUNDLE_RETRY: '3'
-          PGHOST: 127.0.0.1
-          PGPASSWORD: sekret
-          PGUSER: circleci
-          RAILS_ENV: test
-          PAGER: cat
+          db-prepare-command:
+            default: db:test:prepare
+            description: Database prepare command
+            type: string
+        executor: << parameters.executor >>
         parallelism: 3
         steps:
           - checkout
@@ -129,7 +175,7 @@ orbs:
               name: Wait for DB
           - run:
               name: Test prepare
-              command: bin/rails db:test:prepare
+              command: bin/rails << parameters.db-prepare-command >>
           - test
       validate-api:
         description: Validate openapi specification
@@ -181,37 +227,3 @@ workflows:
           name: lint
       - ruby-rails/test-gem:
           name: test
-
-# jobs:
-#   build:
-#     docker:
-#       - image: circleci/ruby:2.7.1
-#         environment:
-#           CC_TEST_REPORTER_ID: 47b57fbbf65654b17f33b6ff4a108ce2abed31a86468033f20eb4d4e9e09935a
-#           RAILS_ENV: test
-#     steps:
-#       - checkout
-#       - run:
-#           name: Install Bundler
-#           command: gem install bundler
-#       - run:
-#           name: Which bundler?
-#           command: bundle -v
-#       - run:
-#           name: Bundle Install
-#           command: bundle check || bundle install
-#       - run:
-#           name: Lint using rubocop
-#           command: bundle exec rubocop
-#       - run:
-#           name: Setup Code Climate test-reporter
-#           command: |
-#             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-#             chmod +x ./cc-test-reporter
-#             ./cc-test-reporter before-build
-#       - run:
-#           name: rspec
-#           command: bundle exec rspec
-#       - run:
-#           name: upload test coverage report to Code Climate
-#           command: ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
