--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@ require:
   - rubocop-rspec
 
 AllCops:
-  TargetRubyVersion: 3.0
+  TargetRubyVersion: 2.7 # dor-services-app can't be 3 due to fedora3
   SuggestExtensions: false
 
 Metrics/BlockLength:
