--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,9 @@ Metrics/BlockLength:
     - 'dor-services-client.gemspec'
     - 'spec/**/*'
 
+RSpec/MultipleMemoizedHelpers:
+  Max: 10
+
 Gemspec/DateAssignment: # (new in 1.10)
   Enabled: true
 Layout/SpaceBeforeBrackets: # (new in 1.7)
