--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,7 +18,7 @@ RSpec/MultipleMemoizedHelpers:
 RSpec/ExampleLength:
   Max: 10
 
-Gemspec/DateAssignment: # (new in 1.10)
+Gemspec/DeprecatedAttributeAssignment: # (new in 1.10)
   Enabled: true
 Layout/SpaceBeforeBrackets: # (new in 1.7)
   Enabled: true
