--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,6 @@
 inherit_from: .rubocop_todo.yml
 
-require:
+plugins:
   - rubocop-rspec
 
 AllCops:
@@ -133,11 +133,6 @@ RSpec/IdenticalEqualityAssertion: # new in 2.4
   Enabled: true
 RSpec/SubjectDeclaration: # new in 2.5
   Enabled: true
-FactoryBot/SyntaxMethods: # new in 2.7
-  Enabled: true
-RSpecRails/AvoidSetupHook: # new in 2.4
-  Enabled: true
-
 Lint/RefinementImportMethods: # new in 1.27
   Enabled: true
 Security/CompoundHash: # new in 1.28
@@ -177,18 +172,10 @@ Style/MapCompactWithConditionalBlock: # new in 1.30
   Enabled: true
 RSpec/ChangeByZero: # new in 2.11.0
   Enabled: true
-Capybara/SpecificMatcher: # new in 2.12
-  Enabled: false
-RSpecRails/HaveHttpStatus: # new in 2.12
-  Enabled: false
-
 RSpec/ClassCheck: # new in 2.13
   Enabled: true
 RSpec/NoExpectationExample: # new in 2.13
   Enabled: true
-Capybara/SpecificFinders: # new in 2.13
-  Enabled: true
-
 Gemspec/DevelopmentDependencies: # new in 1.44
   Enabled: false
 Lint/DuplicateMagicComment: # new in 1.37
@@ -237,22 +224,6 @@ Style/RedundantRegexpConstructor: # new in 1.52
   Enabled: true
 Style/RedundantStringEscape: # new in 1.37
   Enabled: true
-Capybara/MatchStyle: # new in 2.17
-  Enabled: true
-Capybara/NegationMatcher: # new in 2.14
-  Enabled: true
-Capybara/SpecificActions: # new in 2.14
-  Enabled: true
-FactoryBot/AssociationStyle: # new in 2.23
-  Enabled: true
-FactoryBot/ConsistentParenthesesStyle: # new in 2.14
-  Enabled: true
-FactoryBot/FactoryAssociationWithStrategy: # new in 2.23
-  Enabled: true
-FactoryBot/FactoryNameStyle: # new in 2.16
-  Enabled: true
-FactoryBot/RedundantFactoryOption: # new in 2.23
-  Enabled: true
 RSpec/BeEmpty: # new in 2.20
   Enabled: true
 RSpec/ContainExactly: # new in 2.19
@@ -271,13 +242,6 @@ RSpec/SkipBlockInsideExample: # new in 2.19
   Enabled: true
 RSpec/SortMetadata: # new in 2.14
   Enabled: true
-RSpecRails/InferredSpecType: # new in 2.14
-  Enabled: true
-RSpecRails/MinitestAssertions: # new in 2.17
-  Enabled: true
-RSpecRails/TravelAround: # new in 2.19
-  Enabled: true
-
 Lint/MixedCaseRange: # new in 1.53
   Enabled: true
 Lint/RedundantRegexpQuantifiers: # new in 1.53
@@ -292,9 +256,6 @@ Style/YAMLFileRead: # new in 1.53
   Enabled: true
 RSpec/ReceiveMessages: # new in 2.23
   Enabled: true
-RSpecRails/NegationBeValid: # new in 2.23
-  Enabled: true
-
 Gemspec/AddRuntimeDependency: # new in 1.65
   Enabled: true
 Lint/DuplicateSetElement: # new in 1.67
@@ -316,18 +277,6 @@ Style/SingleLineDoEndBlock: # new in 1.57
 Style/SuperArguments: # new in 1.64
   Enabled: true
 Style/SuperWithArgsParentheses: # new in 1.58
-  Enabled: true
-Capybara/ClickLinkOrButtonStyle: # new in 2.19
-  Enabled: true
-Capybara/RedundantWithinFind: # new in 2.20
-  Enabled: true
-Capybara/RSpec/HaveSelector: # new in 2.19
-  Enabled: true
-Capybara/RSpec/PredicateMatcher: # new in 2.19
-  Enabled: true
-FactoryBot/ExcessiveCreateList: # new in 2.25
-  Enabled: true
-FactoryBot/IdSequence: # new in 2.24
   Enabled: true
 RSpec/EmptyMetadata: # new in 2.24
   Enabled: true
@@ -352,4 +301,48 @@ RSpec/SpecFilePathFormat: # new in 2.24
 RSpec/SpecFilePathSuffix: # new in 2.24
   Enabled: true
 RSpec/UndescriptiveLiteralsDescription: # new in 2.29
+  Enabled: true
+Lint/ArrayLiteralInRegexp: # new in 1.71
+  Enabled: true
+Lint/ConstantReassignment: # new in 1.70
+  Enabled: true
+Lint/CopDirectiveSyntax: # new in 1.72
+  Enabled: true
+Lint/HashNewWithKeywordArgumentsAsDefault: # new in 1.69
+  Enabled: true
+Lint/NumericOperationWithConstantResult: # new in 1.69
+  Enabled: true
+Lint/RedundantTypeConversion: # new in 1.72
+  Enabled: true
+Lint/SharedMutableDefault: # new in 1.70
+  Enabled: true
+Lint/SuppressedExceptionInNumberConversion: # new in 1.72
+  Enabled: true
+Lint/UnescapedBracketInRegexp: # new in 1.68
+  Enabled: true
+Lint/UselessConstantScoping: # new in 1.72
+  Enabled: true
+Lint/UselessDefined: # new in 1.69
+  Enabled: true
+Style/AmbiguousEndlessMethodDefinition: # new in 1.68
+  Enabled: true
+Style/BitwisePredicate: # new in 1.68
+  Enabled: true
+Style/CombinableDefined: # new in 1.68
+  Enabled: true
+Style/DigChain: # new in 1.69
+  Enabled: true
+Style/FileNull: # new in 1.69
+  Enabled: true
+Style/FileTouch: # new in 1.69
+  Enabled: true
+Style/HashSlice: # new in 1.71
+  Enabled: true
+Style/ItAssignment: # new in 1.70
+  Enabled: true
+Style/KeywordArgumentsMerging: # new in 1.68
+  Enabled: true
+Style/RedundantFormat: # new in 1.72
+  Enabled: true
+Style/SafeNavigationChainLength: # new in 1.68
   Enabled: true
